# pico_teleop_ws

./: .gitignore  README.md
.github/workflows/: docker.yaml  frontend.yaml
docker/: Dockerfile.robot  Dockerfile.server  Dockerfile.voice  docker-compose.robot.yaml  docker-compose.voice-test.yaml  docker-compose.yaml  entrypoint.sh
docker/robots/: Dockerfile.base  Dockerfile.franka  Dockerfile.hans_dual  Dockerfile.limix_oli  Dockerfile.unitree_g1
docs/robot_references/: README.md
src/pico_teleop_bringup/: CMakeLists.txt  package.xml
src/pico_teleop_bringup/config/arms/: franka_single.yaml  isaacsim.yaml  unitree_g1.yaml
src/pico_teleop_bringup/launch/: teleop.launch.py
src/pico_teleop_core/: package.xml  setup.py
src/pico_teleop_core/pico_teleop_core/: arm_dispatcher.py  ik_node.py  retarget_node.py  server_bridge.py
src/pico_teleop_drivers/: package.xml  setup.py
src/pico_teleop_drivers/pico_teleop_drivers/: __init__.py  base_driver.py  isaacsim_driver.py
src/pico_teleop_msgs/: CMakeLists.txt  package.xml
src/pico_teleop_msgs/msg/: ButtonEvent.msg  DualArmPose.msg  TeleopState.msg
src/pico_teleop_msgs/srv/: SwitchArm.srv  SwitchIKSolver.srv
src/pico_teleop_robot/: pyproject.toml
src/pico_teleop_robot/pico_teleop_robot/: __init__.py  bridge.py  data_recorder.py  main.py
src/pico_teleop_voice/: pyproject.toml
src/pico_teleop_voice/pico_teleop_voice/: __init__.py  asr.py  intent.py  server.py  test_standalone.py
src/pico_teleop_web/: index.html  package-lock.json  package.json  vite.config.ts
src/pico_teleop_web/public/: audio-processor.js
src/pico_teleop_web/src/: App.tsx  roslib.d.ts
src/pico_teleop_web/src/components/: ControlPanel.tsx  RobotControl.tsx  RobotViewer.tsx  StatusBar.tsx  VoiceControl.tsx  XROverlay.tsx
src/pico_teleop_web/src/hooks/: useROS.ts  useVoice.ts  useWebXR.ts
