<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pico_teleop_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for PICO teleoperation</description>
  <maintainer email="axgu@todo.com">axgu</maintainer>
  <license>MIT</license>

  <exec_depend>pico_teleop_core</exec_depend>
  <exec_depend>pico_teleop_drivers</exec_depend>
  <exec_depend>pico_teleop_msgs</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
